ccc --- 商品检索 完成面包屑功能(主要是前端帮忙处理好了

--- a/web/web-all/src/main/resources/templates/list/index.html
+++ b/web/web-all/src/main/resources/templates/list/index.html
@@ -55,6 +55,7 @@
                     <span th:text="${searchParam.keyword}"></span>
                 </li>
             </ul>
+            <!--面包屑处理-->
             <ul class="fl sui-tag">
                 <li th:if="${searchParam.trademark != null}" class="with-x">
                     <span th:text="${trademarkParam}"></span>
